<resources>
    <string name="app_name">Oportunidades</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Oportunidades Company</string>
    <string name="nav_header_subtitle">oportunidades@op.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Inicio</string>
    <string name="crear_op">Crear Oportunidad</string>
    <string name="v_op">Ver Oportunidad</string>
    <string name="modificar">Modificar</string>
    <string name="avanzar">Avanzar de fase</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="perfil">Perfil</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Enviar</string>
</resources>
