<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_agregar_125dp"
            android:title="@string/crear_op" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_pageview_black_24dp"
            android:title="@string/v_op" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_edit_125dp_white"
            android:title="@string/modificar" />

        <item
            android:id="@+id/nav_toolss"
            android:icon="@drawable/ic_avanzar_125dp_white"
            android:title="@string/avanzar" />

        <item
            android:id="@+id/nav_toolsa"
            android:icon="@drawable/ic_estadisticas_white_125dp"
            android:title="@string/estadisticas" />

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/perfil" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
