<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RealMainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="55dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#B5A5CAD8"
                android:drawableTop="@drawable/ic_agregar_125dp"
                android:drawingCacheQuality="high"
                android:gravity="center"
                android:onClick="crearOportunidad"
                android:text="@string/crear_op"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#B55DAECE"
                    android:drawableTop="@drawable/ic_pageview_black_24dp"
                    android:drawingCacheQuality="high"
                    android:gravity="center"
                    android:onClick="verOportunidad"
                    android:text="@string/v_op"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#B52F6077"
                    android:drawableTop="@drawable/ic_edit_125dp_white"
                    android:drawingCacheQuality="high"
                    android:gravity="center"
                    android:onClick="modificar"
                    android:text="@string/modificar"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#B50281B4"
                android:drawableTop="@drawable/ic_avanzar_125dp_white"
                android:drawingCacheQuality="high"
                android:gravity="center"
                android:onClick="avanzar"
                android:text="@string/avanzar"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#B562A0D5"
                android:drawableTop="@drawable/ic_estadisticas_white_125dp"
                android:drawingCacheQuality="high"
                android:gravity="center"
                android:onClick="estadisticas"
                android:text="@string/estadisticas"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#B504203D"
                android:drawableTop="@drawable/ic_account_125_white"
                android:drawingCacheQuality="high"
                android:gravity="center"
                android:onClick="perfil"
                android:text="Perfil"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>